tests/baselines/reference/functionOverloads18.errors.txt
tests/cases/compiler/functionOverloads18.ts(1,10): error TS2394: Overload signature is not compatible with function implementation.


==== tests/cases/compiler/functionOverloads18.ts (1 errors) ====
    function foo(bar:{a:number;});
             ~~~
!!! error TS2394: Overload signature is not compatible with function implementation.
    function foo(bar:{a:string;}) { return {a:""} }
    